[gd_scene load_steps=44 format=3 uid="uid://dujukbu10vbmm"]

[ext_resource type="Script" path="res://scripts/entities/player.gd" id="1_lgfyt"]
[ext_resource type="Script" path="res://scripts/player/player_state_machine.gd" id="2_4ql4h"]
[ext_resource type="Shader" path="res://shaders/fade.gdshader" id="3_iqmy4"]
[ext_resource type="Script" path="res://scripts/player/player_idle_state.gd" id="3_pk0l8"]
[ext_resource type="Script" path="res://scripts/player/player_walk_state.gd" id="4_4fxcp"]
[ext_resource type="Material" uid="uid://dp5o22jl53pqh" path="res://materials/player_shader_mat.tres" id="4_ysu0o"]
[ext_resource type="PackedScene" uid="uid://x0oxbha36o2h" path="res://scenes/entities/YBot.tscn" id="5_gusos"]
[ext_resource type="PackedScene" uid="uid://b78ctcv6lulvi" path="res://scenes/utilities/Sword.tscn" id="5_vtx6o"]
[ext_resource type="Script" path="res://scripts/player/player_run_state.gd" id="6_nj3fe"]
[ext_resource type="Script" path="res://scripts/player/player_dodge_state.gd" id="7_e0tbh"]
[ext_resource type="PackedScene" uid="uid://cko2lhqdu4n44" path="res://scenes/components/HitboxComponent.tscn" id="8_2xenc"]
[ext_resource type="Script" path="res://scripts/player/player_attack_state.gd" id="8_bojn3"]
[ext_resource type="Script" path="res://scripts/player/player_jump_state.gd" id="8_jgsl3"]
[ext_resource type="Script" path="res://scripts/player/player_block_state.gd" id="9_t1v34"]
[ext_resource type="PackedScene" uid="uid://b616qwvblkmpo" path="res://scenes/components/BlockComponent.tscn" id="10_hjlwj"]
[ext_resource type="Script" path="res://scripts/player/player_parry_state.gd" id="10_xd0pu"]
[ext_resource type="Script" path="res://scripts/player/player_dizzy_state/player_dizzy_finisher_from_parry_state.gd" id="12_ull0x"]
[ext_resource type="Script" path="res://scripts/player/player_backstab_state/player_backstab_attack_state.gd" id="16_nyfh7"]
[ext_resource type="Script" path="res://scripts/player/player_backstab_state/player_backstab_state.gd" id="16_sn4wl"]
[ext_resource type="Script" path="res://scripts/player/player_dizzy_state/player_dizzy_finisher_state.gd" id="16_vyrl8"]
[ext_resource type="Script" path="res://scripts/player/player_backstab_state/player_backstab_prepare_state.gd" id="17_5scrx"]
[ext_resource type="Script" path="res://scripts/player/player_dizzy_state/player_dizzy_finisher_from_damage_state.gd" id="18_hlp8w"]
[ext_resource type="Script" path="res://scripts/player/player_parried_by_enemy_state.gd" id="19_24iu4"]
[ext_resource type="Script" path="res://scripts/player/player_parried_enemy_hit_state.gd" id="20_1olui"]
[ext_resource type="Script" path="res://scripts/player/player_instability_stun.gd" id="21_3l62o"]
[ext_resource type="Script" path="res://scripts/player/player_hit_by_enemy_state.gd" id="21_x55ju"]
[ext_resource type="PackedScene" uid="uid://bgb0pw8dklo4j" path="res://scenes/components/PlayerRotationComponent.tscn" id="22_23hj7"]
[ext_resource type="Script" path="res://scripts/player/player_drink_state.gd" id="22_47iaw"]
[ext_resource type="PackedScene" uid="uid://7qijntg00gi5" path="res://scenes/components/HeadRotationComponent.tscn" id="23_0vsx7"]
[ext_resource type="Script" path="res://scripts/player/player_checkpoint_state.gd" id="23_3gyf7"]
[ext_resource type="Script" path="res://scripts/player/player_death_state.gd" id="24_adwl8"]
[ext_resource type="PackedScene" uid="uid://k5h6f26p6mgf" path="res://scenes/components/MovementComponent.tscn" id="24_mwhws"]
[ext_resource type="PackedScene" uid="uid://bp3sx3yshrcdb" path="res://scenes/components/InstabilityComponent.tscn" id="26_nvu4k"]
[ext_resource type="PackedScene" uid="uid://b1tn0d24q1ec1" path="res://scenes/components/JumpComponent.tscn" id="26_w2wp7"]
[ext_resource type="PackedScene" uid="uid://cq3fjofav3npm" path="res://scenes/components/HealthComponent.tscn" id="26_ypb3h"]
[ext_resource type="PackedScene" uid="uid://c8qyy3wuwlus6" path="res://scenes/components/RootMotionComponent.tscn" id="27_4dpfb"]
[ext_resource type="PackedScene" uid="uid://bx034hx24dlel" path="res://scenes/components/DodgeComponent.tscn" id="27_7sekg"]
[ext_resource type="PackedScene" uid="uid://bsbt5fjir608i" path="res://scenes/particles/blood.tscn" id="27_63iim"]
[ext_resource type="PackedScene" uid="uid://1elkqdybiiu1" path="res://scenes/components/AttackComponent.tscn" id="28_no1kf"]
[ext_resource type="PackedScene" uid="uid://bg5d27eyqwsfd" path="res://scenes/components/ParryComponent.tscn" id="30_ceaq1"]
[ext_resource type="PackedScene" uid="uid://mmj6qxe250co" path="res://scenes/components/FadeComponent.tscn" id="31_y5b1e"]
[ext_resource type="PackedScene" uid="uid://cbs5mcpj3x6im" path="res://scenes/components/HealthChargeComponent.tscn" id="36_ay03g"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_kr42x"]
render_priority = 0
shader = ExtResource("3_iqmy4")
shader_parameter/albedo = Color(0.239216, 0.239216, 0.239216, 1)
shader_parameter/specular = 0.5
shader_parameter/metallic = 0.0
shader_parameter/roughness = 1.0
shader_parameter/normal_strength = 1.0
shader_parameter/alpha_clip = 0.0

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_lnhvg"]
radius = 0.3
height = 1.8

[node name="Player" type="CharacterBody3D" node_paths=PackedStringArray("state_machine", "character", "movement_component", "root_motion_component", "hitbox_component", "health_component", "instability_component", "jump_component", "block_component", "dodge_component", "rotation_component", "head_rotation_component", "attack_component", "parry_component", "fade_component", "health_charge_component", "weapon", "lock_on_attachment_point", "footsteps") groups=["player"]]
collision_layer = 2
collision_mask = 9
script = ExtResource("1_lgfyt")
state_machine = NodePath("StateMachine")
character = NodePath("CharacterModel")
movement_component = NodePath("MovementComponent")
root_motion_component = NodePath("RootMotionComponent")
hitbox_component = NodePath("HitboxComponent")
health_component = NodePath("HealthComponent")
instability_component = NodePath("InstabilityComponent")
jump_component = NodePath("JumpComponent")
block_component = NodePath("BlockComponent")
dodge_component = NodePath("DodgeComponent")
rotation_component = NodePath("PlayerRotationComponent")
head_rotation_component = NodePath("HeadRotationComponent")
attack_component = NodePath("AttackComponent")
parry_component = NodePath("ParryComponent")
fade_component = NodePath("FadeComponent")
health_charge_component = NodePath("HealthChargeComponent")
weapon = NodePath("CharacterModel/Armature_004/GeneralSkeleton/Sword")
lock_on_attachment_point = NodePath("CharacterModel/Armature_004/GeneralSkeleton/LockOnAttachment/AttachmentPoint")
footsteps = NodePath("CharacterModel/AudioManager/Footsteps")

[node name="CharacterModel" parent="." instance=ExtResource("5_gusos")]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, 0, 0)

[node name="GeneralSkeleton" parent="CharacterModel/Armature_004" index="0"]
bones/1/rotation = Quaternion(0, 2.2904e-14, -6.7831e-14, 1)
bones/2/rotation = Quaternion(2.11667e-10, -2.1808e-13, 2.94964e-16, 1)
bones/3/rotation = Quaternion(3.72529e-09, -4.54747e-13, 2.84217e-14, 1)
bones/4/rotation = Quaternion(2.77556e-17, -6.82121e-13, -3.63798e-12, 1)
bones/5/rotation = Quaternion(2.32831e-10, 0, 3.63803e-12, 1)
bones/8/rotation = Quaternion(-0.500032, -0.499969, -0.500032, 0.499968)
bones/9/rotation = Quaternion(-1.3411e-06, 1, 1.91033e-05, 2.08616e-07)
bones/10/rotation = Quaternion(-4.21468e-08, -0.707107, 0, 0.707107)
bones/11/rotation = Quaternion(-7.10043e-09, 0.707107, -7.10043e-09, 0.707107)
bones/14/rotation = Quaternion(-4.47035e-08, 2.98023e-08, 4.44089e-16, 1)
bones/15/rotation = Quaternion(0, -5.96046e-08, -2.98023e-08, 1)
bones/17/rotation = Quaternion(0, 0, 0, 1)
bones/18/rotation = Quaternion(0, -5.96046e-08, 0, 1)
bones/19/rotation = Quaternion(2.98023e-08, 2.98023e-08, -2.98023e-08, 1)
bones/21/rotation = Quaternion(2.98023e-08, -2.98023e-08, 2.98023e-08, 1)
bones/22/rotation = Quaternion(2.98023e-08, -2.98023e-08, 2.98023e-08, 1)
bones/23/rotation = Quaternion(-1.49012e-08, -1.49012e-08, 1.49012e-08, 1)
bones/25/rotation = Quaternion(-4.47035e-08, -4.47035e-08, 0, 1)
bones/26/rotation = Quaternion(-1.49012e-08, -1.49012e-08, -1.49012e-08, 1)
bones/27/rotation = Quaternion(0, -5.96046e-08, 0, 1)
bones/28/rotation = Quaternion(-2.72691e-06, 2.98023e-08, -0.000141129, 1)
bones/29/rotation = Quaternion(6.22869e-06, 1.04308e-07, 0.000368372, 1)
bones/30/rotation = Quaternion(-3.57628e-06, 0, -0.000229612, 1)
bones/31/rotation = Quaternion(1.49012e-08, -1.49012e-08, 0, 1)
bones/32/rotation = Quaternion(0.499969, -0.500031, -0.499969, -0.500031)
bones/33/rotation = Quaternion(-4.17233e-07, 1, -1.99974e-05, -2.83122e-07)
bones/34/rotation = Quaternion(-4.21468e-08, 0.707107, 0, 0.707107)
bones/35/rotation = Quaternion(-2.81893e-08, -0.707107, -1.39575e-08, 0.707107)
bones/38/rotation = Quaternion(-2.98023e-08, 1.49012e-08, 2.22045e-16, 1)
bones/39/rotation = Quaternion(0, -8.9407e-08, 0, 1)
bones/41/rotation = Quaternion(0, 5.96046e-08, 5.96046e-08, 1)
bones/42/rotation = Quaternion(0, 0, 0, 1)
bones/43/rotation = Quaternion(0, 0, 0, 1)
bones/45/rotation = Quaternion(0, 0, 0, 1)
bones/46/rotation = Quaternion(0, 5.96046e-08, 5.96046e-08, 1)
bones/47/rotation = Quaternion(2.98023e-08, -1.49012e-08, 1.49012e-08, 1)
bones/49/rotation = Quaternion(-1.49012e-08, 4.47035e-08, 5.96046e-08, 1)
bones/50/rotation = Quaternion(-1.49012e-08, 1.49012e-08, -1.49012e-08, 1)
bones/51/rotation = Quaternion(0, 0, 0, 1)
bones/53/rotation = Quaternion(1.49012e-07, -8.9407e-08, -1.05202e-05, 1)
bones/54/rotation = Quaternion(-2.98023e-08, 8.9407e-08, 1.05351e-05, 1)
bones/55/rotation = Quaternion(2.98023e-08, -2.98023e-08, -2.98023e-08, 1)
bones/56/rotation = Quaternion(-8.25414e-09, -1.02951e-05, -1, 8.79593e-08)
bones/57/rotation = Quaternion(1.39698e-09, 1, -1.97939e-05, -5.46588e-08)
bones/58/rotation = Quaternion(-1.20905e-09, 0.707107, -0.707107, 2.41295e-09)
bones/59/rotation = Quaternion(8.23181e-10, 1, 5.96046e-08, -8.23181e-10)
bones/61/rotation = Quaternion(-1.3356e-12, -6.52502e-10, 1, 2.1827e-11)
bones/62/rotation = Quaternion(-2.32831e-10, 1, 1.39698e-09, -1.09139e-11)
bones/63/rotation = Quaternion(1.60006e-09, 0.707107, -0.707107, -3.75576e-10)
bones/64/rotation = Quaternion(-2.63418e-09, 1, 0, 0)

[node name="Alpha_Joints" parent="CharacterModel/Armature_004/GeneralSkeleton" index="0"]
layers = 2
surface_material_override/0 = SubResource("ShaderMaterial_kr42x")

[node name="Alpha_Surface" parent="CharacterModel/Armature_004/GeneralSkeleton" index="1"]
layers = 2
surface_material_override/0 = ExtResource("4_ysu0o")

[node name="Sword" parent="CharacterModel/Armature_004/GeneralSkeleton" index="2" node_paths=PackedStringArray("_entity") instance=ExtResource("5_vtx6o")]
transform = Transform3D(7.54791e-07, -1, -8.41021e-05, 5.5829e-07, 8.41021e-05, -1, 1, 7.54744e-07, 5.58354e-07, -0.737829, 1.43565, -0.0617137)
_entity = NodePath("../../../..")

[node name="LockOnAttachment" parent="CharacterModel/Armature_004/GeneralSkeleton" index="3"]
transform = Transform3D(1, 7.35419e-12, -2.66409e-12, -7.35419e-12, 1, -7.87391e-09, 2.66409e-12, 7.87391e-09, 1, -2.25238e-05, 1.34721, -0.0427615)

[node name="Crosshair" parent="CharacterModel/Armature_004/GeneralSkeleton/LockOnAttachment/AttachmentPoint" index="0"]
enabled = false

[node name="HeadAttachment" parent="CharacterModel/Armature_004/GeneralSkeleton" index="4"]
transform = Transform3D(1, 7.81293e-14, -2.66409e-12, -7.81293e-14, 1, -8.33958e-09, 2.66409e-12, 8.33958e-09, 1, -4.44873e-05, 1.60075, -0.00340819)

[node name="AnimationTree" parent="CharacterModel" index="2"]
"parameters/Dizzy Finisher Which One/current_state" = ""
"parameters/Dizzy Finisher Which One/current_index" = -1
"parameters/Dizzy From Damage/current_state" = ""
"parameters/Dizzy From Damage/current_index" = -1
"parameters/Dizzy Which One/current_state" = ""
"parameters/Dizzy Which One/current_index" = -1

[node name="StateMachine" type="Node" parent="." node_paths=PackedStringArray("player")]
script = ExtResource("2_4ql4h")
player = NodePath("..")

[node name="Idle" type="Node" parent="StateMachine" node_paths=PackedStringArray("walk_state", "dodge_state", "jump_state", "attack_state", "block_state", "parry_state", "backstab_state", "player")]
script = ExtResource("3_pk0l8")
walk_state = NodePath("../Walk")
dodge_state = NodePath("../Dodge")
jump_state = NodePath("../Jump")
attack_state = NodePath("../Attack")
block_state = NodePath("../Block")
parry_state = NodePath("../Parry")
backstab_state = NodePath("../Backstab")
player = NodePath("../..")

[node name="Walk" type="Node" parent="StateMachine" node_paths=PackedStringArray("idle_state", "dodge_state", "run_state", "jump_state", "attack_state", "block_state", "parry_state", "backstab_state", "player")]
script = ExtResource("4_4fxcp")
idle_state = NodePath("../Idle")
dodge_state = NodePath("../Dodge")
run_state = NodePath("../Run")
jump_state = NodePath("../Jump")
attack_state = NodePath("../Attack")
block_state = NodePath("../Block")
parry_state = NodePath("../Parry")
backstab_state = NodePath("../Backstab")
player = NodePath("../..")

[node name="Run" type="Node" parent="StateMachine" node_paths=PackedStringArray("idle_state", "walk_state", "jump_state", "dodge_state", "attack_state", "block_state", "parry_state", "backstab_state", "player")]
script = ExtResource("6_nj3fe")
idle_state = NodePath("../Idle")
walk_state = NodePath("../Walk")
jump_state = NodePath("../Jump")
dodge_state = NodePath("../Dodge")
attack_state = NodePath("../Attack")
block_state = NodePath("../Block")
parry_state = NodePath("../Parry")
backstab_state = NodePath("../Backstab")
player = NodePath("../..")

[node name="Dodge" type="Node" parent="StateMachine" node_paths=PackedStringArray("run_state", "jump_state", "player")]
script = ExtResource("7_e0tbh")
run_state = NodePath("../Run")
jump_state = NodePath("../Jump")
player = NodePath("../..")

[node name="Jump" type="Node" parent="StateMachine" node_paths=PackedStringArray("walk_state", "attack_state", "block_state", "parry_state", "player")]
script = ExtResource("8_jgsl3")
walk_state = NodePath("../Walk")
attack_state = NodePath("../Attack")
block_state = NodePath("../Block")
parry_state = NodePath("../Parry")
player = NodePath("../..")

[node name="Attack" type="Node" parent="StateMachine" node_paths=PackedStringArray("parry_state", "block_state", "dizzy_finisher_state", "player")]
script = ExtResource("8_bojn3")
parry_state = NodePath("../Parry")
block_state = NodePath("../Block")
dizzy_finisher_state = NodePath("../DizzyFinisher")
player = NodePath("../..")

[node name="Block" type="Node" parent="StateMachine" node_paths=PackedStringArray("parry_state", "attack_state", "blocking_sfx", "block_sfx", "player")]
script = ExtResource("9_t1v34")
parry_state = NodePath("../Parry")
attack_state = NodePath("../Attack")
blocking_sfx = NodePath("../../CharacterModel/AudioManager/Blocking")
block_sfx = NodePath("../../CharacterModel/AudioManager/Block")
player = NodePath("../..")

[node name="Parry" type="Node" parent="StateMachine" node_paths=PackedStringArray("block_state", "dizzy_finisher_state", "player")]
script = ExtResource("10_xd0pu")
block_state = NodePath("../Block")
dizzy_finisher_state = NodePath("../DizzyFinisher")
player = NodePath("../..")

[node name="ParriedEnemyHit" type="Node" parent="StateMachine" node_paths=PackedStringArray("attack_state", "block_state", "parry_state", "dizzy_finisher_state", "sfx", "player")]
script = ExtResource("20_1olui")
attack_state = NodePath("../Attack")
block_state = NodePath("../Block")
parry_state = NodePath("../Parry")
dizzy_finisher_state = NodePath("../DizzyFinisher")
sfx = NodePath("../../CharacterModel/AudioManager/Parry")
player = NodePath("../..")

[node name="Backstab" type="Node" parent="StateMachine" node_paths=PackedStringArray("prepare_state", "attack_state", "player")]
script = ExtResource("16_sn4wl")
prepare_state = NodePath("Prepare")
attack_state = NodePath("Attack")
player = NodePath("../..")

[node name="Prepare" type="Node" parent="StateMachine/Backstab" node_paths=PackedStringArray("dodge_state", "jump_state", "attack_state", "block_state", "parry_state", "backstab_attack_state", "player")]
script = ExtResource("17_5scrx")
dodge_state = NodePath("../../Dodge")
jump_state = NodePath("../../Jump")
attack_state = NodePath("../../Attack")
block_state = NodePath("../../Block")
parry_state = NodePath("../../Parry")
backstab_attack_state = NodePath("../Attack")
player = NodePath("../../..")

[node name="Attack" type="Node" parent="StateMachine/Backstab" node_paths=PackedStringArray("player")]
script = ExtResource("16_nyfh7")
player = NodePath("../../..")

[node name="DizzyFinisher" type="Node" parent="StateMachine" node_paths=PackedStringArray("from_parry", "from_damage", "player")]
script = ExtResource("16_vyrl8")
from_parry = NodePath("FromParry")
from_damage = NodePath("FromDamage")
player = NodePath("../..")

[node name="FromParry" type="Node" parent="StateMachine/DizzyFinisher" node_paths=PackedStringArray("player")]
script = ExtResource("12_ull0x")
player = NodePath("../../..")

[node name="FromDamage" type="Node" parent="StateMachine/DizzyFinisher" node_paths=PackedStringArray("player")]
script = ExtResource("18_hlp8w")
player = NodePath("../../..")

[node name="ParriedByEnemy" type="Node" parent="StateMachine" node_paths=PackedStringArray("attack_state", "player")]
script = ExtResource("19_24iu4")
attack_state = NodePath("../Attack")
player = NodePath("../..")

[node name="HitByEnemy" type="Node" parent="StateMachine" node_paths=PackedStringArray("attack_state", "block_state", "parry_state", "sfx", "player")]
script = ExtResource("21_x55ju")
attack_state = NodePath("../Attack")
block_state = NodePath("../Block")
parry_state = NodePath("../Parry")
sfx = NodePath("../../CharacterModel/AudioManager/Hit")
player = NodePath("../..")

[node name="Drink" type="Node" parent="StateMachine" node_paths=PackedStringArray("health_charge_component", "player")]
script = ExtResource("22_47iaw")
health_charge_component = NodePath("../../HealthChargeComponent")
player = NodePath("../..")

[node name="Checkpoint" type="Node" parent="StateMachine" node_paths=PackedStringArray("player")]
script = ExtResource("23_3gyf7")
player = NodePath("../..")

[node name="Death" type="Node" parent="StateMachine" node_paths=PackedStringArray("player")]
script = ExtResource("24_adwl8")
player = NodePath("../..")

[node name="InstabilityStun" type="Node" parent="StateMachine" node_paths=PackedStringArray("attack_state", "block_state", "parry_state", "sfx", "player")]
script = ExtResource("21_3l62o")
attack_state = NodePath("../Attack")
block_state = NodePath("../Block")
parry_state = NodePath("../Parry")
sfx = NodePath("../../CharacterModel/AudioManager/Stun")
player = NodePath("../..")

[node name="Collider" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.9, 0)
shape = SubResource("CapsuleShape3D_lnhvg")

[node name="PlayerRotationComponent" parent="." node_paths=PackedStringArray("entity") instance=ExtResource("22_23hj7")]
entity = NodePath("..")

[node name="HeadRotationComponent" parent="." node_paths=PackedStringArray("skeleton", "rotation_component") instance=ExtResource("23_0vsx7")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.65, 0)
skeleton = NodePath("../CharacterModel/Armature_004/GeneralSkeleton")
rotation_component = NodePath("../PlayerRotationComponent")

[node name="MovementComponent" parent="." node_paths=PackedStringArray("entity", "rotation_component") instance=ExtResource("24_mwhws")]
speed = 3.0
debug = true
entity = NodePath("..")
rotation_component = NodePath("../PlayerRotationComponent")

[node name="RootMotionComponent" parent="." node_paths=PackedStringArray("character", "entity", "rotation_component") instance=ExtResource("27_4dpfb")]
character = NodePath("../CharacterModel")
enabled = false
entity = NodePath("..")
rotation_component = NodePath("../PlayerRotationComponent")

[node name="HitboxComponent" parent="." node_paths=PackedStringArray("entity") instance=ExtResource("8_2xenc")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.9, 0)
collision_layer = 2
entity = NodePath("..")
groups = Array[String](["enemy"])

[node name="InstabilityComponent" parent="." node_paths=PackedStringArray("hitbox", "weapon") instance=ExtResource("26_nvu4k")]
hitbox = NodePath("../HitboxComponent")
weapon = NodePath("../CharacterModel/Armature_004/GeneralSkeleton/Sword")
receive_weapon_parried = false
reduction_pause_length = 5.0
reduction_rate = 5.0

[node name="HealthComponent" parent="." instance=ExtResource("26_ypb3h")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.3, 0)
blood_scene = ExtResource("27_63iim")

[node name="JumpComponent" parent="." node_paths=PackedStringArray("entity", "animations", "movement_component", "jump_sfx", "land_sfx") instance=ExtResource("26_w2wp7")]
entity = NodePath("..")
animations = NodePath("../CharacterModel")
movement_component = NodePath("../MovementComponent")
jump_sfx = NodePath("../CharacterModel/AudioManager/Jump")
land_sfx = NodePath("../CharacterModel/AudioManager/JumpLand")

[node name="DodgeComponent" parent="." node_paths=PackedStringArray("entity", "movement_component", "jump_component", "sfx") instance=ExtResource("27_7sekg")]
entity = NodePath("..")
movement_component = NodePath("../MovementComponent")
jump_component = NodePath("../JumpComponent")
sfx = NodePath("../CharacterModel/AudioManager/Dodge")

[node name="AttackComponent" parent="." node_paths=PackedStringArray("_attack_animations", "_movement_component", "_weapon") instance=ExtResource("28_no1kf")]
_attack_animations = NodePath("../CharacterModel/AttackAnimations")
_movement_component = NodePath("../MovementComponent")
_weapon = NodePath("../CharacterModel/Armature_004/GeneralSkeleton/Sword")

[node name="BlockComponent" parent="." node_paths=PackedStringArray("movement_component", "character") instance=ExtResource("10_hjlwj")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.95, -0.08)
movement_component = NodePath("../MovementComponent")
character = NodePath("../CharacterModel")

[node name="ParryComponent" parent="." node_paths=PackedStringArray("hitbox_component", "block_component") instance=ExtResource("30_ceaq1")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
hitbox_component = NodePath("../HitboxComponent")
block_component = NodePath("../BlockComponent")
parry_particles_colour = Color(0.027451, 0.278431, 0.427451, 1)

[node name="FadeComponent" parent="." node_paths=PackedStringArray("origin_point", "meshes") instance=ExtResource("31_y5b1e")]
origin_point = NodePath("../CharacterModel/Armature_004/GeneralSkeleton/LockOnAttachment/AttachmentPoint")
meshes = [NodePath("../CharacterModel/Armature_004/GeneralSkeleton/Alpha_Joints"), NodePath("../CharacterModel/Armature_004/GeneralSkeleton/Alpha_Surface"), NodePath("../CharacterModel/Armature_004/GeneralSkeleton/Sword/Mesh")]

[node name="HealthChargeComponent" parent="." node_paths=PackedStringArray("entity", "character", "health_component") instance=ExtResource("36_ay03g")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.27364, 0)
entity = NodePath("..")
character = NodePath("../CharacterModel")
health_component = NodePath("../HealthComponent")
max_charges = 3

[editable path="CharacterModel"]
[editable path="CharacterModel/Armature_004/GeneralSkeleton/Sword"]
